<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/widget_item_background"
    android:orientation="vertical" >

    <TextView
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:text="@string/hello"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:src="@drawable/indonesia"
        android:contentDescription="@string/todo" />


    <RelativeLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingTop="15dp"
            android:src="@drawable/preview1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:textColor="#FFFFFF"
            android:text="@string/ahmad_abu_hasan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="75dp"
            android:text="@string/_117227007"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingTop="15dp"
            android:src="@drawable/preview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:text="@string/muhammad_amirul_fuad"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="75dp"
            android:text="@string/_117227027"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>